--- a/src/RpgTracker.Engine/RpgTracker.Engine.csproj
+++ b/src/RpgTracker.Engine/RpgTracker.Engine.csproj
@@ -8,4 +8,8 @@
       <ProjectReference Include="..\RpgTracker.Domain\RpgTracker.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="DiceNotation.CoreClass" Version="1.0.0" />
+    </ItemGroup>
+
 </Project>
